Fixed text clipping and other issues

--- a/static/style.scss
+++ b/static/style.scss
@@ -57,6 +57,12 @@ header {
     margin: $padding-size;
 }
 
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: $padding-size;
+}
+
 .post {
     width: 100px;
     min-height: 130px;
@@ -69,11 +75,16 @@ header {
 
     img {
         max-width: 80%;
-        max-height: 50%;
+        max-height: 60px;
     }
 
     a {
-        float:left; clear:left
+        display: block;
+        size: 100%;
+        //float:left; clear:left;
+        text-align: center;
+        line-height: 1em;
+        overflow-wrap: break-word;
     }
 }
 
@@ -130,6 +141,10 @@ header {
         //background-color: rgb(66, 66, 66);
         //margin: $padding-size;
         //padding: $padding-size;
+    }
+
+    .post-row {
+        overflow-x: scroll;
     }
 }
 
